# NoLoseBattleship

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.txt  log.txt
include/: AttackField.h  BattleShip.h  Computer.h  DefenceField.h  DummyPlayer.h  FilesIO.h  HealShip.h  Main.h  Main.hpp  Player.h  Pos.h  Replay.h  Ship.h  Submarine.h  Types.h
log/: log.txt  log_cc.txt  log_pc.txt  log_replay.txt
src/: AttackField.cpp  BattleShip.cpp  Computer.cpp  DefenceField.cpp  DummyPlayer.cpp  FilesIO.cpp  HealShip.cpp  Main.cpp  Player.cpp  Pos.cpp  Replay.cpp  Ship.cpp  Submarine.cpp
